--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^7.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
